Fix keycloak stateful API.
