# keycloak/src/controllers/controller.ts
@@ -16,9 +16,10 @@ export async function login(req: Request, res: Response): Promise<void> {
   }
 }
 
-export async function getAllUsers(_req: Request, res: Response): Promise<void> {
+export async function getAllUsers(req: Request, res: Response): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   try {
-    const users = await service.getAllUsers();
+    const users = await service.getAllUsers(accessToken);
     res.status(200).json(users);
   } catch (error) {
     handleError(res, error as APIError);
@@ -26,9 +27,10 @@ export async function getAllUsers(_req: Request, res: Response): Promise<void> {
 }
 
 export async function getUserById(req: Request, res: Response): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   const id = req.params.id;
   try {
-    const user = await service.getUserById(id);
+    const user = await service.getUserById(id, accessToken);
     res.status(200).json(user);
   } catch (error) {
     handleError(res, error as APIError);
@@ -36,9 +38,10 @@ export async function getUserById(req: Request, res: Response): Promise<void> {
 }
 
 export async function createUser(req: Request, res: Response): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   const body = req.body as CreateUserRequestBody;
   try {
-    const newUser = await service.createUser(body);
+    const newUser = await service.createUser(body, accessToken);
     res.status(201).json(newUser);
   } catch (error) {
     handleError(res, error as APIError);
@@ -46,10 +49,11 @@ export async function createUser(req: Request, res: Response): Promise<void> {
 }
 
 export async function updateUser(req: Request, res: Response): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   const id = req.params.id;
   const body = req.body as CreateUserRequestBody;
   try {
-    await service.updateUser(id, body);
+    await service.updateUser(id, body, accessToken);
     res.status(204).json({});
   } catch (error) {
     handleError(res, error as APIError);
@@ -60,10 +64,11 @@ export async function updateUserPassword(
   req: Request,
   res: Response
 ): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   const id = req.params.id;
   const password = req.body.password as string;
   try {
-    await service.updateUserPassword(id, password);
+    await service.updateUserPassword(id, password, accessToken);
     res.status(204).json({});
   } catch (error) {
     handleError(res, error as APIError);
@@ -71,9 +76,10 @@ export async function updateUserPassword(
 }
 
 export async function deleteUser(req: Request, res: Response): Promise<void> {
+  const accessToken = req.headers.authorization as string;
   const id = req.params.id;
   try {
-    await service.deleteUser(id);
+    await service.deleteUser(id, accessToken);
     res.status(204).json({});
   } catch (error) {
     handleError(res, error as APIError);
