# keycloak/src/docs/swagger.json
@@ -27,6 +27,14 @@
         "description": "Endpoint to login as an administrator.",
         "parameters": [
           {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -51,6 +59,16 @@
       "get": {
         "tags": ["Users"],
         "description": "Endpoint to fetch all users.",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Ok."
@@ -67,6 +85,14 @@
         "tags": ["Users"],
         "description": "Endpoint to create an user.",
         "parameters": [
+          {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
           {
             "name": "body",
             "in": "body",
@@ -97,6 +123,14 @@
         "description": "Endpoint to fetch an user by ID.",
         "parameters": [
           {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
+          {
             "name": "id",
             "description": "An user ID.",
             "in": "path",
@@ -124,6 +158,14 @@
         "tags": ["Users"],
         "description": "Endpoint to update an user.",
         "parameters": [
+          {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
           {
             "name": "id",
             "description": "An user ID.",
@@ -159,6 +201,14 @@
         "tags": ["Users"],
         "description": "Endpoint to update the password of an user.",
         "parameters": [
+          {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
           {
             "name": "id",
             "description": "An user ID.",
@@ -201,6 +251,14 @@
         "description": "Endpoint to delete an user.",
         "parameters": [
           {
+            "name": "Authorization",
+            "description": "An admin access token.",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/AccessToken"
+            }
+          },
+          {
             "name": "id",
             "description": "An user ID.",
             "in": "path",
@@ -228,6 +286,10 @@
   },
   "components": {
     "schemas": {
+      "AccessToken": {
+        "type": "string",
+        "example": "Bearer <YOUR_TOKEN>"
+      },
       "UserID": {
         "type": "string",
         "example": "5e2052a2-1030-440a-a623-9095613d5c73"
